fhir test cases fix